--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>richtercloud</groupId>
         <artifactId>document-scanner-aggregator</artifactId>
-        <version>1.0-beta</version>
+        <version>1.0-beta2</version>
     </parent>
     <artifactId>document-scanner-it</artifactId>
     <packaging>jar</packaging>
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>richtercloud</groupId>
             <artifactId>document-scanner</artifactId>
-            <version>${richtercloud.document.scanner.version}</version>
+            <version>1.0-beta2</version>
             <type>jar</type>
         </dependency>
         <!--Other dependencies-->
