--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>richtercloud</groupId>
-        <artifactId>document-scanner-aggregator</artifactId>
+        <artifactId>document-scanner-parent</artifactId>
         <version>1.0-beta2</version>
     </parent>
     <artifactId>document-scanner-it</artifactId>
     <packaging>jar</packaging>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <richtercloud.document.scanner.hibernate.version>5.0.11.Final</richtercloud.document.scanner.hibernate.version>
-    </properties>
     <dependencies>
         <!--document-scanner dependencies-->
         <dependency>
