changed deprecated forkMode to forkCount in maven-failsafe-plugin, added logging statements in order to debug JVM crash on Travis CI and reduced MD5 test data size to 250MB

--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,10 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
-                            <forkMode>always</forkMode>
+                            <forkCount>1</forkCount>
+                                <!-- only fork for differernt argLine (more than
+                                        one fork can easily cause navtive memory
+                                        error -->
                             <argLine>-Xmx12g</argLine>
                                 <!-- Xmx8g is too small for
                                         LargeBinaryStorageIT -->
