--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>richtercloud</groupId>
+        <groupId>de.richtercloud</groupId>
         <artifactId>document-scanner-parent</artifactId>
         <version>1.0-beta4</version>
         <relativePath>..</relativePath>
@@ -15,12 +15,12 @@
     <dependencies>
         <!--document-scanner dependencies-->
         <dependency>
-            <groupId>richtercloud</groupId>
+            <groupId>de.richtercloud</groupId>
             <artifactId>document-scanner</artifactId>
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>richtercloud</groupId>
+            <groupId>de.richtercloud</groupId>
             <artifactId>document-scanner-demo</artifactId>
             <version>1.0-beta4</version>
             <scope>test</scope>
